# xbmc4xbox-nxdk

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  build.sh
addons/metadata.movies.themoviedb.org/: addon.xml  changelog.txt  tmdb.xml
addons/metadata.tvshows.themoviedb.org/: addon.xml  tmdb.xml
docs/: README.NXDK.md  README.md
docs/roadmap/: README.md
lib/: crossguid_nxdk.patch  fmt_nxdk.patch  tinyxml2_nxdk.patch  tinyxml_nxdk.patch
lib/fribidi/: CMakeLists.txt
lib/fribidi/lib/: config.h  fribidi-common.h  fribidi-config.h
lib/fstrcmp/: CMakeLists.txt
lib/libiconv/: CMakeLists.txt
lib/sqlite/: CMakeLists.txt  sqlite_win32.c
system/: addon-manifest.xml
xbmc/: Application.cpp  Application.h  ApplicationPlayer.cpp  ApplicationPlayer.h  AutoSwitch.cpp  ContextMenuItem.cpp  ContextMenuManager.cpp  ContextMenus.cpp  DatabaseManager.cpp  FileItem.cpp  FileItem.h  GUIInfoManager.cpp  GUIInfoManager.h  GUILargeTextureManager.cpp  GUILargeTextureManager.h  GUIPassword.cpp  GUIUserMessages.h  LangInfo.cpp  LangInfo.h  Makefile  PartyModeManager.cpp  PlayListPlayer.cpp  SeekHandler.cpp  ServiceBroker.cpp  ServiceBroker.h  ServiceManager.cpp  ServiceManager.h  SystemGlobals.cpp  TextureCacheJob.cpp  TextureCacheJob.h  URL.cpp  Util.cpp  Util.h  XBDateTime.cpp  system.h  system_gl.h  unimplemented.cpp  unimplemented.h
xbmc/addons/: AddonBuilder.cpp  AddonInstaller.cpp  AddonManager.cpp  AddonRepos.cpp  AddonStatusHandler.cpp  AddonSystemSettings.cpp  CMakeLists.txt  ContextMenus.cpp  Makefile  Repository.cpp  RepositoryUpdater.cpp  Scraper.cpp  (+3 more)
(+417 files in other folders)
