cmake_minimum_required(VERSION 3.18)
project(sqlite LANGUAGES C)

add_library(sqlite sqlite3.c sqlite_win32.c)

add_definitions(
  -DSQLITE_WITHOUT_MSIZE=1
  -DSQLITE_OS_OTHER=1
  -DSQLITE_DEFAULT_MEMSTATUS=0
  -DSQLITE_OMIT_DEPRECATED
  -DSQLITE_OMIT_PROGRESS_CALLBACK
  -DSQLITE_OMIT_SHARED_CACHE
  -DSQLITE_OMIT_AUTOINIT
  -DSQLITE_DISABLE_INTRINSIC
  -DSQLITE_DEFAULT_WAL_SYNCHRONOUS=1
  -DSQLITE_OMIT_SEH
)

target_include_directories(sqlite PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
